phd defense and NIPS added

--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
+                        <li><b>Sept 2025:</b> Our work on toxicity mitigation got accepted at <a href="https://neurips.cc/" target="_blank">NeurIPS 2025</a>.</li>
+                        <li style="color: maroon; font-weight: bold;"> 🎓 Sept 2025: I have successfully defended my PhD Thesis.</li>
                         <li><b>Sept 2025:</b> Got invited to <a href="https://www.dagstuhl.de/25361" target="_blank">Dagstuhl Seminar</a> on NLP for Mental Health in Germany.</li>
+                        <li><b>Sept 2025:</b> Our work on peer support improvement on OMHCs got accepted at <a href="https://2025.emnlp.org/" target="_blank">EMNLP Findings 2025</a>.</li>
                         <li><b>April 2025:</b> Started as Postdoctoral Researcher at MBZUAI!!!</li>
                         <li><b>Jan 2025:</b> Our work on meme detection on support forums got accepted at <a href="https://www2025.thewebconf.org/" target="_blank">WWW 2025</a>.</li>
                         <li><b>Dec 2024:</b> Our work on human behavior analysis for effective online support got accepted at <a href="https://journals.plos.org/plosone/" target="_blank">PLOS ONE</a>.</li>
@@ -134,6 +137,14 @@
                     <hr>
                     <p class="header pt-3">Publications</p>
 
+                    <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+                        <span class="papertitle">Redefining Experts: Interpretable Decomposition of Language Models for Toxicity Mitigation</span><br> Zuhair Hasan Shaik, Abdullah Mazhar, <span class="thisauthor"> Aseem Srivastava</span>, Md Shad Akhtar<br>
+                        <span class="conf"><a class="confshort" href="https://2025.emnlp.org/"><b>NeurIPS '25 </b></a> | Conference on Neural Information Processing Systems 2025</span><br>     
+                        <a class="tag" href="https://neurips.cc/virtual/2025/poster/120183" target="_blank">website</a> 
+                        <a class="tag" href="https://github.com/flamenlp/EigenShift" target="_blank">code</a> 
+                    </p></div></div>
+                    
+                    
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">Assess and Prompt: A Generative RL Framework for Improving Engagement in Online Mental Health Communities</span><br> Bhagesh Gaur, Karan Gupta, <span class="thisauthor"> Aseem Srivastava</span>, Manish Gupta, Md Shad Akhtar<br>
                         <span class="conf"><a class="confshort" href="https://2025.emnlp.org/"><b>EMNLP (Findings) '25 </b></a> | Conference on Empirical Methods in Natural Language Processing 2025</span><br>     
