Revise research description and add recent updates
Updated research interests and recent achievements, including the Google Academic Research Award and recent talks.

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
                     <!-- I am affiliated with the RiTUAL lab and Monojit's lab.  -->
                         Previously, I did my PhD from IIIT Delhi, India, where I was advised by Prof. <a href="http://faculty.iiitd.ac.in/~shad.akhtar/" target="_blank">Shad Akhtar</a> (<a href="https://flamenlp.github.io/" target="_blank">FLaME Lab</a>, IIIT Delhi) and Prof. <a href="http://faculty.iiitd.ac.in/~tanmoy/" target="_blank">Tanmoy Chakraborty</a> (<a href="https://www.lcs2.in/" target="_blank">LCS2 Lab</a>, IIT Delhi). 
                         <br><br>
-                        My research lies at the intersection of <b>applied computational social science</b>, <b>psycholinguistics</b>, and recently, <b>sociolinguistics</b>. My early works focused on using LLMs in the context of digital health, applying psycholinguistics to better understand social interaction behaviors and mental health in conversational systems. Recently, my interest has expanded to the study of culturality, exploring how LLMs can better understand and reflect cultural dynamics during social interactions.
-
-                        <!-- To know more, refer to my resume or drop me an <a href="mailto:aseems@iiitd.ac.in">email</a>! -->
+                        My research lies at the intersection of <b>applied computational social science</b>, <b>psycholinguistics</b>, and recently, <b>sociolinguistics</b>. My early works focused on using LLMs in the context of digital health, applying psycholinguistics to better understand social interaction behaviors and mental health in conversational systems. Recently, my interest has expanded to the study of safer AI companionship, for which we have been recently awarded and funded by  <a href="https://research.google/programs-and-events/google-academic-research-awards/google-academic-research-award-program-recipients/?filtertab=2025" target="_blank">Google Academic Research Award (GARA)</a>, where we investigate loneliness (in online spaces) and human–AI relationships through the lenses of psycho-sociolinguistics and cultural dynamics in social interactions.
 
                         <!-- <br><br>
                         <span style="color:rgb(143, 0, 0); font-size: large;"><b><i class="fas fa-briefcase"></i> &nbsp; I am on the job market. I am looking for a postdoc / research scientist positions to join immediately.</b></span> -->
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
-                        <li><b>Sept 2025:</b> Our work on toxicity mitigation got accepted at <a href="https://neurips.cc/" target="_blank">NeurIPS 2025</a>.</li>
+                        <li style="color: maroon; font-weight: bold;"> 🤯 We received the prestigious Google Academic Research Award (GARA) for our work on safer AI Companionship. See award listing <a href="https://research.google/programs-and-events/google-academic-research-awards/google-academic-research-award-program-recipients/?filtertab=2025" target="_blank">here</a>.</li>
+						<li><b>Oct 2025:</b> Got invited to deliver a talk on AI Safety and Alignment at <a href="https://heads-ai.com/announcements" target="_blank">HEADS-AI workshop by NIMHANS</a>.</li>
+						<li><b>Sept 2025:</b> Our work on toxicity mitigation got accepted at <a href="https://neurips.cc/" target="_blank">NeurIPS 2025</a>.</li>
                         <li style="color: maroon; font-weight: bold;"> 🎓 Sept 2025: I have successfully defended my PhD Thesis.</li>
                         <li><b>Sept 2025:</b> Got invited to <a href="https://www.dagstuhl.de/25361" target="_blank">Dagstuhl Seminar</a> on NLP for Mental Health in Germany.</li>
                         <li><b>Sept 2025:</b> Our work on peer support improvement on OMHCs got accepted at <a href="https://2025.emnlp.org/" target="_blank">EMNLP Findings 2025</a>.</li>
@@ -267,19 +267,23 @@
 
                 <p class="header pt-3">Invited Talks & Symposiums</p>
                     
-
+					<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
+                        <span class="papertitle"> Oct '25 &nbsp | &nbsp  Got invited to HEADS-AI workshop on Responsible AI at NIMHANS to present a talk on AI Safety and Alignment.</span><br>
+                        <span class="conf"><a class="confshort" href="https://heads-ai.com/announcements" target="_blank"><b>HEADS-AI Workshop by NIMHANS</b></a> &nbsp | &nbsp 
+                        <a class="tag" href="https://heads-ai.com/announcements" target="_blank">Workshop Website</a>
+						<a class="tag" href="https://www.linkedin.com/posts/as3eem_responsibleai-psychiatry-aisafety-activity-7386493225831792640-uPhD" target="_blank">LinkedIn</a>
+						<a class="tag" href="https://www.youtube.com/watch?v=drcfOGh_JAE" target="_blank">YouTube</a>
+                    </p></div></div>
 
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle"> Sept '25 &nbsp | &nbsp  Got invited to Dagstuhl Seminar on NLP for Mental Health at Schloss Dagstuhl, Germany.</span><br>
                         <span class="conf"><a class="confshort" href="https://www.dagstuhl.de/25361" target="_blank"><b>Dagstuhl Seminar 25361</b></a> &nbsp | &nbsp 
-                        <!-- <a class="tag" href="./assets/ACM_ARCS_WWW.pdf" target="_blank">Poster</a> -->
                         <a class="tag" href="https://www.dagstuhl.de/25361" target="_blank">Seminar Website</a>
                     </p></div></div>
                     
                     <div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
                         <span class="papertitle">2025 | 2024 | 2023 &nbsp | &nbsp  Got three back-to-back invitations to attend and present our work at Google India.</span><br>
                         <span class="conf"><a class="confshort" href="https://sites.google.com/view/researchweek24/home"><b>Research Week with Google Deepmind</b></a> &nbsp | &nbsp 
-                        <!-- <a class="tag" href="./assets/ACM_ARCS_WWW.pdf" target="_blank">Poster</a> -->
                         <a class="tag" href="https://www.linkedin.com/posts/as3eem_research-googleindia-technology-activity-7025869102225211392-7OXJ" target="_blank">LinkedIn</a>
                     </p></div></div>
 
