Update event details and wording in index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <p class="header pt-3">News and Updates</p>
 
                     <ul>
-                        <li style="color: maroon; font-weight: bold;"> 🤯 We received the prestigious Google Academic Research Award (GARA) for our work on safer AI Companionship. See award listing <a href="https://research.google/programs-and-events/google-academic-research-awards/google-academic-research-award-program-recipients/?filtertab=2025" target="_blank">here</a>.</li>
+                        <li style="color: maroon; font-weight: bold;"> 🔥 Oct 2025: We received the prestigious Google Academic Research Award (GARA) for our work on safer AI Companionship. See award listing <a href="https://research.google/programs-and-events/google-academic-research-awards/google-academic-research-award-program-recipients/?filtertab=2025" target="_blank">here</a>.</li>
 						<li><b>Oct 2025:</b> Got invited to deliver a talk on AI Safety and Alignment at <a href="https://heads-ai.com/announcements" target="_blank">HEADS-AI workshop by NIMHANS</a>.</li>
 						<li><b>Sept 2025:</b> Our work on toxicity mitigation got accepted at <a href="https://neurips.cc/" target="_blank">NeurIPS 2025</a>.</li>
                         <li style="color: maroon; font-weight: bold;"> 🎓 Sept 2025: I have successfully defended my PhD Thesis.</li>
@@ -268,7 +268,7 @@
                 <p class="header pt-3">Invited Talks & Symposiums</p>
                     
 					<div class="row"><div class="col-lg-12"><p class="paper my-2 pl-2">
-                        <span class="papertitle"> Oct '25 &nbsp | &nbsp  Got invited to HEADS-AI workshop on Responsible AI at NIMHANS to present a talk on AI Safety and Alignment.</span><br>
+                        <span class="papertitle"> Oct '25 &nbsp | &nbsp  Got invited to HEADS-AI workshop by NIMHANS to present a talk on AI Safety and Alignment.</span><br>
                         <span class="conf"><a class="confshort" href="https://heads-ai.com/announcements" target="_blank"><b>HEADS-AI Workshop by NIMHANS</b></a> &nbsp | &nbsp 
                         <a class="tag" href="https://heads-ai.com/announcements" target="_blank">Workshop Website</a>
 						<a class="tag" href="https://www.linkedin.com/posts/as3eem_responsibleai-psychiatry-aisafety-activity-7386493225831792640-uPhD" target="_blank">LinkedIn</a>
